--- a/Android-Speech-to-Text-Example/app/src/main/res/values/colors.xml
+++ b/Android-Speech-to-Text-Example/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ff4c4c</color>
-    <color name="colorPrimaryDark">#ff0000</color>
-    <color name="colorAccent">#ff4c4c</color>
+    <color name="colorPrimary">#012b55</color>
+    <color name="colorPrimaryDark">#012b55</color>
+    <color name="colorAccent">#012b55</color>
 </resources>
