--- a/Android-Speech-to-Text-Example/app/src/main/res/layout/activity_main.xml
+++ b/Android-Speech-to-Text-Example/app/src/main/res/layout/activity_main.xml
@@ -49,4 +49,25 @@
             android:layout_margin="10dp"
             android:text="@string/hint" />
     </LinearLayout>
+
+    <EditText
+        android:id="@+id/keyWordEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:hint="Key Word"
+        android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/phoneNumberEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/keyWordEdit"
+        android:layout_centerHorizontal="true"
+        android:contentDescription="Phone Number"
+        android:ems="10"
+        android:hint="Phone Number"
+        android:inputType="phone" />
 </RelativeLayout>
